--- a/pom.xml
+++ b/pom.xml
@@ -20,3 +20,5 @@
         </plugins>
     </build>
 </project>
+
+<!-- mvn deploy:deploy-file -Durl=file://C:\_projects\javache\LocalRepository -Dfile=magic-injector-1.jar -DgroupId=com.cyecize  -DartifactId=ioc -Dpackaging=jar -Dversion=1 -->
