--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.demo</groupId>
     <artifactId>magic-injector</artifactId>
-    <version>1</version>
+    <version>1.1</version>
     <build>
         <plugins>
             <plugin>
@@ -47,4 +47,4 @@
     </dependencies>
 </project>
 
-<!-- mvn deploy:deploy-file -Durl=file://C:\_projects\javache\LocalRepository -Dfile=magic-injector-1.jar -DgroupId=com.cyecize  -DartifactId=ioc -Dpackaging=jar -Dversion=1 -->
+<!-- mvn deploy:deploy-file -Durl=file://C:\z_symfony\javache\LocalRepository -Dfile=original-magic-injector-1.1.jar -DgroupId=com.cyecize  -DartifactId=ioc -Dpackaging=jar -Dversion=1.1 -DpomFile=../ioc.pom -->
